--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ScareMe</string>
+    <string name="app_name">Scare Me</string>
+    <string name="sign_in">Sign In</string>
 </resources>
